--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,13 @@
-body {
+body
+ {
   margin: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
